--- a/frontend/packages/shared/src/components/LeftNavigationBar/LeftNavigationBar.module.css
+++ b/frontend/packages/shared/src/components/LeftNavigationBar/LeftNavigationBar.module.css
@@ -3,7 +3,7 @@
   width: 250px;
   height: 100%;
   left: 0;
-  border: 1px solid var(--fds-semantic-border-neutral-divider);
+  border-right: 1px solid var(--fds-semantic-border-neutral-divider);
   border-top: none;
 }
 
