--- a/frontend/packages/shared/src/components/Modal/Modal.module.css
+++ b/frontend/packages/shared/src/components/Modal/Modal.module.css
@@ -5,6 +5,9 @@
   --modal-position: 50%;
   --modal-translate: calc(var(--modal-position) * -1);
   --heading-height: 60px;
+  --modal-border-size: 1px;
+  --modal-content-max-height: calc(var(--modal-max-size) - var(--heading-height)) -
+    var(--modal-border-size);
 
   max-width: var(--modal-max-size);
   min-width: var(--modal-min-size);
@@ -20,6 +23,7 @@
   padding: 0;
   padding-top: 20px;
   background-color: var(--fds-semantic-background-default);
+  border: var(--modal-border-size) solid var(--fds-semantic-border-neutral-subtle);
 }
 
 .modalOverlay {
@@ -40,8 +44,7 @@
 }
 
 .contentWrapper {
-  max-height: calc(var(--modal-max-size) - var(--heading-height));
-  overflow-y: auto;
+  max-height: var(--modal-content-max-height);
 }
 
 .closeButtonWrapper {
